--- a/app/src/main/res/drawable/simple_border.xml
+++ b/app/src/main/res/drawable/simple_border.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="1dp" android:color="#2487BF"/>
+    <stroke android:width="1dp"
+        android:color="#9FA8DA"/>
 </shape>
