--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -2,15 +2,10 @@
 <selector xmlns:android = "http://schemas.android.com/apk/res/android">
     <item>
         <layer-list>
-            <item>
-                <shape android:shape="oval">
-                    <solid android:color="#4E4E4E" />
-                    <corners android:radius="20dp" />
-                </shape>
-            </item>
+
             <item android:bottom="4px" android:right="4px">
                 <shape android:shape = "oval">
-                    <solid android:color = "#2073A1"/>
+                    <solid android:color = "@color/ic_bg_color"/>
                 </shape>
             </item>
         </layer-list>
