--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:fontFamily="monospace"
-        android:text="сука блять"
+        android:text="By мстители"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
