--- a/app/src/main/res/layout/screen1.xml
+++ b/app/src/main/res/layout/screen1.xml
@@ -25,10 +25,12 @@
             />
 
         <fragment
-            android:id="@+id/fragment_Screen1"
-            android:name="com.beginner.translite.TransFragment"
+            android:id="@+id/NavHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="500dp"
+            app:navGraph="@navigation/navigation"
+            app:defaultNavHost="true"
             />
     </LinearLayout>
 
