--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/historyFragment"
-        android:icon="@android:drawable/ic_menu_recent_history"
+        android:icon="@drawable/ic_baseline_history_24"
         android:title="History"
         app:showAsAction="ifRoom"
         />
