--- a/app/src/main/res/layout/fragment_trans.xml
+++ b/app/src/main/res/layout/fragment_trans.xml
@@ -81,7 +81,7 @@
                     android:layout_margin="15dp"
                     android:layout_weight="3"
                     android:background="@drawable/simple_border"
-                    android:backgroundTint="@android:color/holo_blue_light"
+                    android:backgroundTint="@color/ic_bg_color"
                     android:text="@string/translated_text_pointer"
                     android:textColor="@color/white"
                     android:textSize="28sp"
