--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,7 +21,7 @@
         android:label="HistoryFragment" />
     <fragment
         android:id="@+id/blankFragment"
-        android:name="com.beginner.translite.BlankFragment"
+        android:name="com.beginner.translite.AboutFragment"
         android:label="fragment_about"
         tools:layout="@layout/fragment_about" />
 </navigation>
