--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ic_bg_color">#2073A1</color>
+    <color name="ic_bg_variant">#039BE5</color>
 </resources>
