--- a/app/src/main/res/layout/fragment_trans.xml
+++ b/app/src/main/res/layout/fragment_trans.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -12,8 +14,6 @@
         android:fillViewport="true"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/ic_background_panchuta"
@@ -54,16 +54,6 @@
                     android:textSize="16sp"
                     />
 
-                <ImageButton
-                    android:id="@+id/translate_button"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="15sp"
-                    android:background="@drawable/round_button"
-                    android:contentDescription="@string/translate"
-                    android:gravity="center"
-                    app:srcCompat="@drawable/translation" />
 
                 <Spinner
                     android:id="@+id/lang_to"
@@ -89,26 +79,36 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginHorizontal="15dp"
                 android:alpha="0.25"
-                android:background="#c0c0c0"
+                android:background="@color/ic_bg_variant"
                 app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
                 app:layout_constraintRight_toRightOf="@id/linearLayout2"
                 app:layout_constraintTop_toTopOf="@id/linearLayout2" />
 
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="@string/usage_instructer"
-                android:textSize="16sp"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/translate_button"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/ic_baseline_translate_24"
+                android:tint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.868"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.784"
+                android:contentDescription="Translate"
+                android:backgroundTint="@color/ic_bg_variant"
+                app:tint="@color/white"
+                app:layout_gravity ="center"
+                />
+<!--Only app:tint will change the color of the icon, not android:tint-->
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
